# stacked-diffs

./: .gitignore  LICENSE  README.md  pyproject.toml
stacked_diffs/: main.py
stacked_diffs/commands/: add.py  alias.py  prune.py  run.py  tree.py
stacked_diffs/utils/: classes.py  default_aliases.py  git.py  metadata.py  util.py
tests/: conftest.py  test_add.py  test_alias.py  test_complex_scenarios.py  test_edge_cases.py  test_main_integration.py  test_prune.py  test_run.py  test_tree.py  utils.py
